<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Work/Leisure</string>
    <string name="title_activity_claim_list">Claim list</string>
    <string name="title_activity_task_list">Task list</string>
    <string name="title_activity_edit_task">Edit task</string>
    <string name="title_activity_task_detail">Task details</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_task">Add task</string>
    <string name="action_edit">Edit</string>
    <string name="action_undo">Undo</string>
    <string name="action_delete">Discard</string>
    <string name="action_view_archive">View archive</string>
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="user_balances">jneickhoff.workleisure.USER_BALANCE</string>
    <string name="default_balance">DEFAULT_BALANCE</string>
    <string name="hello_world">Hello world!</string>
    <string name="balance">Balance</string>
    <string name="work">"Work "</string>
    <string name="leisure">"Leisure "</string>
    <string name="add_new">Add task</string>
    <string name="old_tasks">View archive</string>
    <string name="archive">archive</string>
    <string name="task_name">Task name</string>
    <string name="archived_task">Archived task</string>
    <string name="importance">Importance</string>
    <string name="task_name_hint">What is the task?</string>
    <string name="task_description">Description</string>
    <string name="task_description_hint">What are the details about the task?</string>
    <string name="task_bounty">Expected bounty</string>
    <string name="task_stock">Remaining stock</string>
    <string name="stock_type_prompt">Choose…</string>
    <string name="default_stock">1</string>
    <string name="default_bounty">0</string>

    <string-array name="importance_types">
        <item>High importance</item>
        <item>Low importance</item>
    </string-array>
    <string-array name="stock_types">
        <item>Unlimited</item>
        <item>Limited to…</item>
    </string-array>
    <string-array name="sort_types">
        <item>Importance</item>
        <item>A to Z</item>
        <item>Z to A</item>
        <item>Oldest first</item>
        <item>Newest first</item>
        <item>Times claimed</item>
    </string-array>

    <string name="sort">Sort</string>
    <string name="add_task">Add task</string>
    <string name="add_claim_task">Add &amp; claim task</string>
    <string name="confirm">Confirm</string>
    <string name="delete_task">Discard</string>
    <string name="cancel">Never mind!</string>
    <string name="okay">Okay</string>
    <string name="updated_label">"Updated "</string>
    <string name="due_label">"Due "</string>
    <string name="archived_extension">", archived"</string>
    <string name="high_importance">High importance</string>
    <string name="low_importance">Low importance</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="bounty_label">"Expected bounty"</string>
    <string name="stock_label">"Remaining stock"</string>
    <string name="claim">Claim</string>
    <string name="latest_claims">Latest 3 claims</string>
    <string name="latest_claims_5">Latest 5 claims</string>
    <string name="editTask">Edit</string>
    <string name="msg_claim_task">"Would you like to claim this task?"</string>
    <string name="label_balance_change">"Change in balance: "</string>
    <string name="arrow">" &#8594; "</string>
    <string name="bounty">Different bounty (optional)</string>
    <string name="comment">Comment</string>
    <string name="dash_break">" - "</string>
    <string name="view_all">View &amp; edit all claims</string>
    <string name="claim_list_instructions">To discard a claim, tap it</string>
    <string name="graph_title">Bounty claimed per day</string>
    <string name="undo">Undo</string>
    <string name="dueItToday">Due it today</string>
    <string name="dueItTomorrow">Due it tomorrow</string>
    <string name="removeDue">Remove due date</string>
    <string name="dueLateHeader">Some tasks are a bit late!</string>
    <string name="dueSoonHeader">Some tasks are due soon!</string>
    <string name="dueSomedayHeader">Some tasks are due someday!</string>
    <string name="no_due_tasks">No tasks are due</string>
    <string name="title_activity_claim_recent">Recent Claims</string>
    <string name="view_weeks_claims">View week\'s claims</string>
    <string name="total_claims">total claims</string>
    <string name="unlimited">Unlimited</string>
    <string name="claimed">claimed</string>
    <string name="task_delete_confirm">"Discard task?"</string>
    <string name="claim_delete_confirm">"Discard claim and refund bounty?"</string>
    <string name="title_activity_late_upcoming_tasks">Due tasks</string>
    <string name="view_late_upcoming_tasks">View due tasks</string>
    <string name="title_activity_bounty_goal_list">Goal list</string>
    <string name="set_bounty_goal">Set bounty goal</string>
    <string name="edit">Edit</string>
    <string name="current_bounty_goal">Current bounty goal</string>
    <string name="goal_met">Goal met!</string>
    <string name="goal_miss">Goal miss!</string>
    <string name="view_bounty_goals">View bounty goals</string>
    <string name="bounty_target">Bounty target</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="abandon">Abandon</string>
    <string name="abandon_goal_q">"Abandon current goal?"</string>
    <string name="delete_goal_q">"Discard goal?"</string>
    <string name="to_view_claims_tap_goal">To view all claims made during goal, tap it</string>
    <string name="goals">Goals</string>
    <string name="title_activity_current_goal_list">Current goals list</string>
    <string name="view_current_goals">View current goals</string>
    <string name="no_goal_set">No goals are set</string>
    <string name="forward_slash">"/"</string>
    <string name="goalsDueSoonHeader">Some goals are due soon!</string>
    <string name="goal">Goal</string>
    <string name="end_now">End now</string>
    <string name="end_now_q">"End current goal now?"</string>
    <string name="title_activity_goal_claim_list">Goal claims list</string>
    <string name="goal_discarded">Goal discarded</string>
    <string name="goal_started">Goal started</string>
    <string name="goal_updated">Goal updated</string>
    <string name="to_view_details_tap">To view task details, tap task name</string>
    <string name="dif_bounty1">"Different bounty ("</string>
    <string name="dif_bounty2">" default)"</string>
    <string name="action_reset_balance">Reset balance</string>
    <string name="reset_balance_q">"Reset balance to 0.0?"</string>
    <string name="current_goal_ended">Current goal ended now</string>
    <string name="current_goal_abandoned">Current goal abandoned</string>
    <string name="discarded">discarded</string>
    <string name="no_claims">No claims</string>
    <string name="never">never</string>
    <string name="unnamed_task">Unnamed Task</string>
    <string name="empty_task_discarded">Empty task discarded</string>
    <string name="no_changes_made">No changes made</string>
    <string name="edited">Edited</string>
    <string name="new_task_discarded">New task discarded</string>
    <string name="changes_abandoned">Changes abandoned</string>

</resources>
