<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".EditTaskActivity" >
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		
	    <!-- 
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/task_name"/>
	    -->
	    
	    <EditText 
	        android:id="@+id/editTaskName"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:inputType="text"
	        android:maxLines="1"
	        android:textSize="22sp"
	        android:hint="@string/task_name"/>
	    
	    <!--
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/importance"/>
	    -->
	    
	    <Spinner 
		    android:id="@+id/spnTaskImportance"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:entries="@array/importance_types" />	
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
	        <CheckBox
	            android:id="@+id/chkTaskDue"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	        
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textSize="18sp"
	            android:text="@string/due_label"/>
	        
	        <TextView
	            android:id="@+id/txtTaskDueDate"
	            android:layout_weight="1"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            style="@android:style/Widget.Holo.Light.Spinner" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	    
		    <CheckBox 
		        android:id="@+id/chkTaskArchived"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="18sp"
		        android:text="@string/archived_task" />
		
	    </LinearLayout>
	    
	    <!--
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/task_description"/>
	    -->
	    
	    <EditText 
	        android:id="@+id/editTaskDesc"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/task_description" />
	    
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/task_bounty" />
		
		<EditText
		    android:id="@+id/editTaskBounty"
		    android:inputType="numberDecimal"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:hint="@string/task_bounty"
			android:textSize="22sp"
			android:text="@string/default_bounty"/>
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/task_stock" />
		
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    
		    <Spinner 
		        android:id="@+id/spnStockType"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:entries="@array/stock_types" />
	
		    <EditText
			    android:id="@+id/editTaskStock"
			    android:inputType="number"
			    android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:hint="@string/task_stock"
				android:textSize="22sp"
				android:text="@string/default_stock"/>
		    	    
		</LinearLayout>
		
	</LinearLayout>
</ScrollView>