<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="5dp"
            android:textColor="@color/white"
            android:text="@string/balance" />
        
        <LinearLayout
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:layout_centerInParent="true"
	   	    android:paddingTop="10sp"
	   	    android:paddingBottom="10sp"
	   	    android:orientation="horizontal" >
	
	   	    <TextView
		        android:id="@+id/txtOldBalance"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/white"
		        android:textSize="26sp" />
	   	    
	   	    <TextView
	   	        android:layout_width="wrap_content"
	   	        android:layout_height="wrap_content"
	   	        android:textColor="@color/white"
	   	        android:textSize="26sp"
	   	        android:text="@string/arrow" />
	   	    
	   	    <TextView
	   	        android:id="@+id/txtNewBalance"
	   	        android:layout_width="wrap_content"
	   	        android:layout_height="wrap_content"
	   	        android:textColor="@color/white"
	   	        android:textSize="26sp"/>
		
		</LinearLayout>
        
    </RelativeLayout>

   	<EditText
   	    android:id="@+id/editBounty"
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:inputType="numberDecimal"
   	    android:hint="@string/bounty" />
   	
   	<EditText 
   	    android:id="@+id/editComment"
   	    android:layout_width="fill_parent"
   	    android:layout_height="wrap_content"
   	    android:lines="3"
   	    android:inputType="textMultiLine"
   	    android:hint="@string/comment" />
   	
   	<LinearLayout
   	    android:id="@+id/lytRemoveDue"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:orientation="horizontal"
   	    android:visibility="gone">
   	    
   	    <CheckBox
   	        android:id="@+id/chkRemoveDue"
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:checked="true"/>
   	    
   	    <TextView
   	        android:layout_width="wrap_content"
   	        android:layout_height="wrap_content"
   	        android:text="@string/removeDue"/>
   	    
   	</LinearLayout>
   	
</LinearLayout>
