<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
	    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	    
	    <RelativeLayout
	        android:id="@+id/lytBalanceWrapper"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
	        android:paddingRight="@dimen/activity_horizontal_margin"
	        android:background="@color/blue" >
	        
	        <TextView 
		        android:layout_width="wrap_content"
	   	    	android:layout_height="wrap_content"
	   	    	android:layout_alignParentLeft="true"
	   	    	android:layout_alignParentTop="true"
	        	android:textColor="@color/white"
	        	android:text="@string/balance" />
	        
		    <TextView
		        android:id="@+id/textBalance"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true"
		        android:textSize="26sp" 
		        android:textColor="@color/white"/>
	    
	    </RelativeLayout>
	    
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingTop="10dp"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingBottom="@dimen/activity_vertical_margin" >
	    
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
		        android:paddingBottom="10dp"
	            android:orientation="horizontal" >
	        
			    <ImageButton 
			        android:id="@+id/btnWorkList"
			        android:layout_weight="1"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:padding="8dp"
			        android:src="@drawable/ic_tie"
			        android:background="@drawable/button_work"
			        android:contentDescription="@string/work"
			        android:onClick="onClick" />
			    
			    <ImageButton 
			        android:id="@+id/btnLeisureList"
			        android:layout_marginLeft="16dp"
			        android:layout_weight="1"
			        android:layout_width="0dp"
			        android:layout_height="wrap_content"
			        android:padding="8dp"
			        android:src="@drawable/ic_glass"
			        android:background="@drawable/button_leisure"
			        android:contentDescription="@string/leisure"
			        android:onClick="onClick" />
		    
		    </LinearLayout>
	        
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/graph_title"/>
	        
	        <jneickhoff.workleisure.MirrorBarGraph
	            android:id="@+id/workLeisureBarGraph"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingTop="5dp"
	            android:paddingBottom="10dp"
	            custom:lineColor="@color/light_grey"
	            custom:labelColor="@color/light_grey"
	            custom:showLabels="true"
	            custom:labelTextSize="14sp"
	            custom:topDataColor="@color/blue"
	            custom:bottomDataColor="@color/red" />	        
	        <Button 
		        android:id="@+id/btnViewRecentClaims"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/view_weeks_claims"
		        android:onClick="onClick" />
	        
		    
		    <Button
		        android:id="@+id/btnViewLateUpcomingTasks"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/view_late_upcoming_tasks"
		        android:onClick="onClick" />
		    
		    <Button
		        android:id="@+id/btnViewCurrentGoals"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/view_current_goals"
		        android:onClick="onClick" />
		    
		</LinearLayout>
	        
	</LinearLayout>
	
</ScrollView>