<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/editBountyTarget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bounty_target"
        android:inputType="numberDecimal" />

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/start_date"/>
        
        <TextView
            android:id="@+id/txtStartDate"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.Spinner" />
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/end_date"/>
        
        <TextView
            android:id="@+id/txtEndDate"
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.Spinner" />
        
    </LinearLayout>
    
</LinearLayout>
