<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >
        
        <TextView
	        android:id="@+id/txtDueLateHeader"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:textColor="@color/red"
	        android:text="@string/dueLateHeader" />
	    
	    <LinearLayout
	        android:id="@+id/lytDueLateTasks"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="10dp"
	        android:orientation="vertical" />
	    
	    <TextView
	        android:id="@+id/txtDueSoonHeader"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:textColor="@color/yellow"
	        android:text="@string/dueSoonHeader" />
	    
	    <LinearLayout
	        android:id="@+id/lytDueSoonTasks"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="10dp"
	        android:orientation="vertical" />
	    
	    <TextView
	        android:id="@+id/txtGoalsDueSoonHeader"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:textColor="@color/purple"
	        android:text="@string/goalsDueSoonHeader" />
	    
	    <LinearLayout
	        android:id="@+id/lytDueSoonGoals"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingBottom="10dp"
	        android:orientation="vertical" />
        
    </LinearLayout>

</ScrollView>
