<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BountyGoalListActivity" >

    <LinearLayout
        android:id="@+id/lytHeader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:paddingBottom="5dp"
	    android:layout_marginBottom="15dp" >
        
        <TextView
	        android:id="@+id/txtName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:textSize="22sp" />
	        
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/purple" >
        
        <LinearLayout
            android:id="@+id/lytCurrentGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
   			android:paddingRight="@dimen/activity_horizontal_margin" >
   			
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:text="@string/current_bounty_goal"/>
            
            <jneickhoff.workleisure.HorizontalMeter
                 android:id="@+id/metCurrentGoal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingBottom="3dp"
                 custom:color="@color/white"
                 custom:overColor="@color/black"
                 custom:textColor="@color/white"
                 custom:backgroundColor="@color/white"
                 custom:isBackgroundPainted="true"
                 custom:isMaxDisplayed="true" />
            
            <jneickhoff.workleisure.NotchedHorizontalMeter 
                android:id="@+id/metTimeCurrentGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:backgroundColor="@color/white"
                custom:isBackgroundPainted="true"/>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:id="@+id/txtCurStartDate"
             		android:layout_width="wrap_content"
             		android:layout_height="wrap_content"
             		android:layout_alignParentLeft="true"
             		android:textColor="@color/white"
             		android:textSize="12sp" />
                
                <TextView
                    android:id="@+id/txtCurEndDate"
             		android:layout_width="wrap_content"
             		android:layout_height="wrap_content"
             		android:layout_alignParentRight="true"
             		android:textColor="@color/white"
             		android:textSize="12sp" />
                
            </RelativeLayout>
            
   		</LinearLayout>
        
        <LinearLayout
            android:id="@+id/lytEditButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="horizontal" >
            
        	<Button
	            android:id="@+id/btnEdit"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/edit"
	            android:onClick="onClick" />
        	
        	<Button
        	    android:id="@+id/btnAbandon"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/abandon"
        	    android:onClick="onClick" />
        	
        	<Button
        	    android:id="@+id/btnEndNow"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:text="@string/end_now"
        	    android:onClick="onClick" />
        	
       	</LinearLayout>
        
        <Button
            android:id="@+id/btnSetBountyGoal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
	   		android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/set_bounty_goal"
            android:onClick="onClick" />
        
    </LinearLayout>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
   		android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/to_discard_tap_goal"
        android:textSize="12sp" />
    
    <ListView
        android:id="@+id/listBountyGoals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
   		android:paddingRight="@dimen/activity_horizontal_margin" />
    
</LinearLayout>